Update About section.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@ description: Using IIIF to access the Libraries' image collections
 </head>
 <body>
 <h1>About</h1>
+<p>This website with different examples of how to leverage IIIF to access the University of Victoria ("UVic") Libraries' image collections. The Libraries currently manage two platforms that support IIIF: <a href="https://vault.library.uvic.ca" target="_blank">Vault</a> and <a href="https://exhibits.library.uvic.ca" target="_blank">Spotlight</a>(digital exhibits).</p>
+<p>Examples for each platform are listed on separate pages (linked above). The "Image Requests" page contains general instructions that can be applied to any IIIF image, although examples are taken from UVic platforms.</p>
 <h1>Glossary</h1>
 </body>
 </html>
