Add headings to Vault examples page.

--- a/vault.html
+++ b/vault.html
@@ -11,12 +11,19 @@ description: Examples using items from vault.library.uvic.ca
     <title>Vault Examples</title>
 </head>
 <body>
-<h1>Find a Manifest for a Work</h1>
-<ol>
-    <li>If using Chrome, download the <a href="https://chromewebstore.google.com/detail/json-formatter/bcjindcccaagfpapjjmafapmmgkkhgoa" target="_blank">JSON Formatter extension</a>. (It makes reading and copying JSON much easier.)</li>
-    <li>Go to any image work's page (example from Herbert Geddes collection).</li>
-    <li>Add <strong>/manifest.json</strong> on the end and hit Enter.</li>
-</ol>
-<h1>Use a Manifest with Your Own Viewer</h1>
+
+    <h1>Find a Manifest for a Work</h1>
+
+    <ol>
+        <li>If using Chrome, download the <a href="https://chromewebstore.google.com/detail/json-formatter/bcjindcccaagfpapjjmafapmmgkkhgoa" target="_blank">JSON Formatter extension</a>. (It makes reading and copying JSON much easier.)</li>
+        <li>Go to any image work's page (<a href="https://vault.library.uvic.ca/concern/generic_works/4ca5b526-94b8-496b-bc70-05d4b1c83d6e" target="_blank">example</a> from the John Betjman collection).</li>
+        <li>Add <strong>/manifest.json</strong> on the end and hit Enter. This will bring you to the manifest for that work (<a href="https://vault.library.uvic.ca/concern/generic_works/4ca5b526-94b8-496b-bc70-05d4b1c83d6e/manifest.json" target="_blank">example</a>).</li>
+    </ol>
+
+    <h1>Use a Manifest with Your Own Viewer</h1>
+
+    <h1>Using Custom Metadata with a Vault Image</h1>
+
+    <h1>Images of a Specific Size or Region</h1>
 </body>
 </html>
