Add text for 1st example on Spotlight page. Add titles for other sections.

--- a/spotlight.html
+++ b/spotlight.html
@@ -3,3 +3,26 @@ layout: default
 title: Spotlight
 description: Examples using items from exhibits.library.uvic.ca
 ---
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>Vault Examples</title>
+</head>
+<body>
+
+<h1>Find a Manifest for a Work</h1>
+
+<ol>
+    <li>If using Chrome, download the <a href="https://chromewebstore.google.com/detail/json-formatter/bcjindcccaagfpapjjmafapmmgkkhgoa" target="_blank">JSON Formatter extension</a>. (It makes reading and copying JSON much easier.)</li>
+    <li>Go to the "catalog" page, i.e. the page with the viewer and metadata. (<a href="https://exhibits.library.uvic.ca/spotlight/ian-mctaggart-cowan/catalog/4-11997" target="_blank">example</a> from the Ian McTaggart Cowan exhibit).</li>
+    <li>Add <strong>/manifest.json</strong> on the end and hit Enter. This will bring you to the manifest for that work (<a href="https://exhibits.library.uvic.ca/spotlight/ian-mctaggart-cowan/catalog/4-11997/manifest.json" target="_blank">example</a>).</li>
+</ol>
+
+<h1>Use a Manifest with Your Own Viewer</h1>
+
+<h1>Using Custom Metadata with a Vault Image</h1>
+
+<h1>Images of a Specific Size or Region</h1>
+</body>
+</html>
