Add link to Image API page from vault and spotlight pages.

--- a/spotlight.html
+++ b/spotlight.html
@@ -19,11 +19,13 @@ description: Examples using items from exhibits.library.uvic.ca
     <img class="screenshot" src="assets/images/spotlight_work_example.jpg" alt="A screenshot of the example Spotlight catalog page, which includes a navigation bar and an image viewer." />
     <li>Add <strong>/manifest.json</strong> on the end and hit Enter. This will bring you to the manifest for that work (<a href="https://exhibits.library.uvic.ca/spotlight/ian-mctaggart-cowan/catalog/4-11997/manifest.json" target="_blank">example</a>).</li>
 </ol>
+<h1>Images of a Specific Size or Region</h1>
+
+<p>For instructions and examples of how to request images using IIIF, see the <a href="/image-api">Image API page</a>.</p>
 
 <h1>Use a Manifest with Your Own Viewer</h1>
 
 <h1>Using Custom Metadata with a Vault Image</h1>
 
-<h1>Images of a Specific Size or Region</h1>
 </body>
 </html>
