--- a/vault.html
+++ b/vault.html
@@ -21,10 +21,13 @@ description: Examples using items from vault.library.uvic.ca
         <li>Add <strong>/manifest.json</strong> on the end and hit Enter. This will bring you to the manifest for that work (<a href="https://vault.library.uvic.ca/concern/generic_works/4ca5b526-94b8-496b-bc70-05d4b1c83d6e/manifest.json" target="_blank">example</a>).</li>
     </ol>
 
+    <h1>Images of a Specific Size or Region</h1>
+
+    <p>For instructions and examples of how to request images using IIIF, see the <a href="/image-api">Image API page</a>.</p>
+
     <h1>Use a Manifest with Your Own Viewer</h1>
 
     <h1>Using Custom Metadata with a Vault Image</h1>
 
-    <h1>Images of a Specific Size or Region</h1>
 </body>
 </html>
