Add alt text to region image examples.

--- a/image-api.html
+++ b/image-api.html
@@ -112,7 +112,7 @@ description: Requesting & displaying images using the IIIF Image API
                 <br/>/!200,200/0/default.jpg
             </strong>
         </span>
-        <img src="https://exhibits.library.uvic.ca/images/14862-24c186a1fac33deb92d0dbed4239cac4/1290,2350,400,400/!200,200/0/default.jpg" />
+        <img src="https://exhibits.library.uvic.ca/images/14862-24c186a1fac33deb92d0dbed4239cac4/1290,2350,400,400/!200,200/0/default.jpg" alt="The result/response to the image request above: a green tile with a bumpy texture, which is part of the tile grid in the original image." />
     </div>
     <div class="flex-box">
         <span class="image-request">
@@ -122,7 +122,7 @@ description: Requesting & displaying images using the IIIF Image API
                 <br/>/!200,200/0/default.jpg
             </strong>
         </span>
-        <img src="https://exhibits.library.uvic.ca/images/14862-24c186a1fac33deb92d0dbed4239cac4/900,1900,400,400/!200,200/0/default.jpg" />
+        <img src="https://exhibits.library.uvic.ca/images/14862-24c186a1fac33deb92d0dbed4239cac4/900,1900,400,400/!200,200/0/default.jpg" alt="The result/response to the image request above: a yellow tile with a fuzzy white pattern. It is part of the tile grid in the original image." />
     </div>
     <div class="flex-box">
         <span class="image-request">
@@ -132,6 +132,6 @@ description: Requesting & displaying images using the IIIF Image API
                 <br/>/!200,200/0/default.jpg
             </strong>
         </span>
-        <img src="https://exhibits.library.uvic.ca/images/14862-24c186a1fac33deb92d0dbed4239cac4/500,1450,400,400/!200,200/0/default.jpg" />
+        <img src="https://exhibits.library.uvic.ca/images/14862-24c186a1fac33deb92d0dbed4239cac4/500,1450,400,400/!200,200/0/default.jpg" alt="The result/response to the image request above: a blue tile with a chevron pattern. It is part of the tile grid in the original image. A leaf is etched into the tile's surface." />
     </div>
 </div>
