--- a/vault.html
+++ b/vault.html
@@ -27,7 +27,7 @@ description: Examples using items from vault.library.uvic.ca
 
     <h1>Use a Manifest with Your Own Viewer</h1>
 
-    <h1>Using Custom Metadata with a Vault Image</h1>
+    <h1>Use Custom Metadata with a Vault Image</h1>
 
 </body>
 </html>
