--- a/image-api.html
+++ b/image-api.html
@@ -92,7 +92,7 @@ description: Requesting & displaying images using the IIIF Image API
 <figure>
     <div class="flex-container">
         <div class="flex-box">
-            <span class="image-request"><strong>/0,0,2176,1000/!600,400/0/default.jpg</strong></span>
+            <span class="image-request"><strong>/<span class="red-text">0,0,2176,1000</span>/!600,400/0/default.jpg</strong></span>
             <img class="region-example" src="https://exhibits.library.uvic.ca/images/14862-24c186a1fac33deb92d0dbed4239cac4/0,0,2176,1000/!600,400/0/default.jpg" alt="An image showing the first two rows of tiles from the grid described in the previous image." />
             <figcaption>Human translation of the request: "Give me an image that is 600 pixels wide by 400 pixels tall (maximum). It should be an area that is 2176 x 1000 pixels of the original image, counting from the top left corner (0 pixels from the left edge, 0 pixels from the top edge)."</figcaption>
         </div>
