--- a/spotlight.html
+++ b/spotlight.html
@@ -1,13 +1,13 @@
 ---
 layout: default
-title: Spotlight
+title: Spotlight IIIF Examples
 description: Examples using items from exhibits.library.uvic.ca
 ---
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Spotlight Examples</title>
+    <title>Spotlight IIIF Examples</title>
 </head>
 <body>
 
