--- a/vault.html
+++ b/vault.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Vault
+title: Vault IIIF Examples
 permalink: /vault
 description: Examples using items from vault.library.uvic.ca
 ---
@@ -8,7 +8,7 @@ description: Examples using items from vault.library.uvic.ca
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Vault Examples</title>
+    <title>Vault IIIF Examples</title>
 </head>
 <body>
 
