--- a/vault.html
+++ b/vault.html
@@ -22,7 +22,7 @@ description: Examples using items from vault.library.uvic.ca
 
 The following embedded <a href="https://projectmirador.org/" target="_blank">Mirador viewer</a> uses a manifest from Vault. Click the menu symbol (3 lines) to see the manifest metadata.
 
-<iframe class="mirador-iframe" title="Mirador Example 1" src="/mirador?manifesturl=https://vault.library.uvic.ca/concern/generic_works/fb46f8fc-25e8-45e7-b089-21639a363b53/manifest.json"
+<iframe class="mirador-iframe" title="Mirador Example 1" src="https://uviclibrary.github.io/IIIFDemo/mirador?manifesturl=https://vault.library.uvic.ca/concern/generic_works/fb46f8fc-25e8-45e7-b089-21639a363b53/manifest.json"
         allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true">
 </iframe>
 
