--- a/vault.html
+++ b/vault.html
@@ -28,8 +28,8 @@ The following embedded <a href="https://projectmirador.org/" target="_blank">Mir
 
 <div class="mirador-example-links">
     <a href="https://vault.library.uvic.ca/concern/generic_works/fb46f8fc-25e8-45e7-b089-21639a363b53/manifest.json" target="_blank" >Manifest for this example</a> |
-    <a href="codepen.io/eltiffster/pen/YzbeBeM" target="_blank">Code example on CodePen</a> |
-    <a href="" target="_blank">Embed code example on CodePen</a>
+    <a href="https://codepen.io/eltiffster/pen/YzbeBeM" target="_blank">Code example on CodePen</a> |
+    <a href="https://codepen.io/eltiffster/pen/ExzQrJe" target="_blank">Embed code example on CodePen</a>
 </div>
 
 <h1>Use Custom Metadata with a Vault Image</h1>
