Add simple Mirador example for Spotlight page.

--- a/spotlight.html
+++ b/spotlight.html
@@ -17,4 +17,16 @@ description: Examples using items from exhibits.library.uvic.ca
 
 <h1>Use a Manifest with Your Own Viewer</h1>
 
-<h1>Using Custom Metadata with a Vault Image</h1>
+<p>The following embedded <a href="https://projectmirador.org/" target="_blank">Mirador viewer</a> uses a manifest from Spotlight. Click the menu symbol (3 lines) to see the manifest metadata.</p>
+
+<iframe class="mirador-iframe" title="Spotlight Mirador Example 1" src="https://uviclibrary.github.io/IIIFDemo/mirador?manifesturl=https://exhibits.library.uvic.ca/spotlight/iaff/catalog/17-17130/manifest.json"
+        allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true">
+</iframe>
+
+<div class="mirador-example-links">
+    <a href="https://exhibits.library.uvic.ca/spotlight/mcm/catalog/10-12641/manifest.json" target="_blank" >Manifest for this example</a> |
+    <a href="https://codepen.io/eltiffster/pen/bGyvWGP" target="_blank">Code example on CodePen</a> |
+    <a href="https://codepen.io/eltiffster/pen/bGyvWGP" target="_blank">Embed code example on CodePen</a>
+</div>
+
+<h1>Using Custom Metadata with a Spotlight Manifest</h1>
