--- a/vault.html
+++ b/vault.html
@@ -47,7 +47,7 @@ description: Examples using items from vault.library.uvic.ca
     {
     "@context": "http://iiif.io/api/presentation/2/context.json",
     "@type": "sc:Manifest",
-    "@id": "https://vault.library.uvic.ca/concern/generic_works/8cadb71a-b05e-4cb0-bae7-8ed0df4a4302/manifest",
+    "@id": "https://uviclibrary.github.io/IIIFDemo/manifests/vault_custom_manifest.json",
     "label": "Edited title", # Replace Edited title with a new title
     "description": [
         "Edited description." # Replace Edited description with a new description
@@ -60,6 +60,13 @@ description: Examples using items from vault.library.uvic.ca
             </pre>
     </div>
 </figure>
+
+<p>
+    Note that we also change the <code>@id</code> element to be the URL to our customized
+    manifest instead of the manifest hosted on Spotlight, which aligns with the
+    <a href="https://iiif.io/api/presentation/2.0/#technical-properties" target="_blank">
+        IIIF documentation on the ID property</a>.
+</p>
 
 <p>
     The embedded viewer below uses an example of a customized Vault manifest, which is linked below.
